[package]
name = "rws"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
rand_core = { version = "0.6.4", default-features = false }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"]}
chrono = { version = "0.4.34" }
chrono-tz = { version = "0.8.6", features = ["serde"] }
serde_json = "1.0"
base64="0.21.7"
rand="0.8.5"

[lib]
name = "librws"
path = "src/lib.rs"

